portal/portal.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal 
  namespace: dingxin
spec:
  ports:
    - port: 8080
  selector:
    app: dingxin-portal
